# functional-programming-course

./: README.md
hw1-tarasska/: LICENSE  README.md  hw1.cabal  stack.yaml
hw1-tarasska/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1-tarasska/src/Block2/: Task1.hs  Task2.hs
hw1-tarasska/src/Block3/: Task1.hs  Task2.hs
hw1-tarasska/test/: Main.hs
hw1-tarasska/test/Block1/: Task1Tests.hs  Task2Tests.hs  Task3Tests.hs
hw1-tarasska/test/Block2/: Task1Tests.hs  Task2Tests.hs
hw1-tarasska/test/Block3/: Task1Tests.hs  Task2Tests.hs
hw2-tarasska/: .gitignore  ChangeLog.md  README.md  hw2-tarasska.cabal
hw2-tarasska/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw2-tarasska/src/Block2/: Task1.hs  Task2.hs
hw2-tarasska/src/Block3/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw2-tarasska/test/: Main.hs
hw2-tarasska/test/Block1/: Task1Tests.hs  Task2Tests.hs  Task3Tests.hs
hw2-tarasska/test/Block2/: Task1Tests.hs  Task2Tests.hs
hw2-tarasska/test/Block3/: Task1Tests.hs  (+3 more)
hw3-tarasska/: .gitignore  ChangeLog.md  LICENSE  README.md  hw3-tarasska.cabal
hw3-tarasska/app/: Main.hs
hw3-tarasska/src/: ArgParser.hs  FileManager.hs
hw3-tarasska/test/: ManagerPropertyTest.hs  ManagerUnitTest.hs  Spec.hs
hw4-tarasska/: .editorconfig  ChangeLog.md  README.md  hw4-tarasska.cabal
hw4-tarasska/app/: Main.hs
hw4-tarasska/banchRes/: task1.html  task2.html  task3.html
hw4-tarasska/benchmark/: Main.hs
hw4-tarasska/src/: Task1.hs  Task2.hs  Task3.hs  Task45.hs  Task67.hs
hw4-tarasska/test/: Spec.hs  Task1Test.hs  Task2Test.hs  Task3Test.hs  Task45Test.hs  Task67Test.hs
(+8 files in other folders)
