name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw1-tarasska/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Skazhenik Taras
maintainer:          taras.skazhenik@yandex.ru
copyright:           2020 Skazhenik Taras

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1, Block1.Task2, Block1.Task3,
                       Block2.Task1, Block2.Task2,
                       Block3.Task1, Block3.Task2

  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  other-modules:     Block1.Task1Tests, Block1.Task2Tests, Block1.Task3Tests
                     Block2.Task1Tests, Block2.Task2Tests,
                     Block3.Task1Tests, Block3.Task2Tests

  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
                     -Wno-missing-home-modules
  main-is:           Main.hs
  build-depends:     base >= 4.9 && < 5, hw1,
                     hspec, hedgehog, hspec-hedgehog,
                     tasty, tasty-hedgehog, tasty-hspec
  default-language:  Haskell2010
